--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.17.2",
+    "botkit": "^0.5.7",
     "cors": "^2.8.4",
     "express": "4.15.4",
     "morgan": "^1.8.2",
